--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mongoose": "^8.5.2",
     "pg": "^8.12.0",
@@ -24,8 +26,10 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.0.2",
     "nodemon": "^3.1.4"
   }
