--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "migrate": "knex migrate:latest",
-    "migrate:make": "knex migrate:make"
+    "migrate:make": "knex migrate:make",
+    "knex": "knex --knexfile dist/knexfile.js"
   },
   "keywords": [],
   "author": "",
