--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,20 +43,20 @@ jobs:
           name: Copy compiled migrations to server
           command: |
             if [ -d "/home/circleci/project/server/dist/migrations" ] && [ "$(ls -A /home/circleci/project/server/dist/migrations)" ]; then
-              scp -vr /home/circleci/project/server/dist/migrations/* $SERVER_USER@$SERVER_IP:SERVER_DIR/server/migrations
+              scp -vr /home/circleci/project/server/dist/migrations/* $SERVER_USER@$SERVER_IP:$SERVER_DIR/server/migrations
             else
               echo "No compiled migrations to copy"
             fi
       - run:
           name: Run database migrations
           command: |
-            ssh -v $SERVER_USER@$SERVER_IP "cd SERVER_DIR/server && NODE_ENV=production npm run migrate || echo 'No migrations to run'"
+            ssh -v $SERVER_USER@$SERVER_IP "cd $SERVER_DIR/server && NODE_ENV=production npm run migrate || echo 'No migrations to run'"
       - run:
           name: Deploy to Server
           command: |
-            scp -vr /home/circleci/project/client/build/* $SERVER_USER@$SERVER_IP:SERVER_DIR/client
-            scp -vr /home/circleci/project/server/dist/* /home/circleci/project/server/package*.json $SERVER_USER@$SERVER_IP:SERVER_DIR/server
-            ssh -v $SERVER_USER@$SERVER_IP "cd SERVER_DIR/server && npm install --production && pm2 restart taskmaster-server && sudo systemctl restart nginx"
+            scp -vr /home/circleci/project/client/build/* $SERVER_USER@$SERVER_IP:$SERVER_DIR/client
+            scp -vr /home/circleci/project/server/dist/* /home/circleci/project/server/package*.json $SERVER_USER@$SERVER_IP:$SERVER_DIR/server
+            ssh -v $SERVER_USER@$SERVER_IP "cd $SERVER_DIR/server && npm install --production && pm2 restart taskmaster-server && sudo systemctl restart nginx"
 
 workflows:
   build-and-deploy:
