--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "migrate": "knex migrate:latest",
     "migrate:make": "knex migrate:make",
-    "knex": "knex --knexfile dist/knexfile.js"
+    "knex": "knex --knexfile dist/knexfile.js",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -32,8 +33,14 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.0.2",
-    "nodemon": "^3.1.4"
+    "@types/supertest": "^6.0.2",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5"
   }
 }
