feat: Configure test database connection settings in CircleCI and knexfile

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,11 @@ jobs:
           name: Run Backend Tests
           command: |
             cd server
+            TEST_DB_HOST=localhost
+            TEST_DB_NAME=test_db
+            TEST_DB_USER=test_user
+            TEST_DB_PASSWORD=test_password
+            TEST_DB_PORT=5432
             npm run test
 
   test-frontend:
