refactor: Update .gitignore and enhance README files for Todo List App

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 package-lock.json
 /.pnp
 .pnp.js
 
 # testing
-client/coverage
+coverage
 
 # production
-/build
+build
 
 # misc
 .DS_Store
@@ -19,17 +19,6 @@ client/coverage
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Client files
-client/node_modules
-client/.env
-client/.env.local
-client/package-lock.json
-
-# Server files
-server/.env
-server/node_modules
-server/package-lock.json
 
 generate_tree.py
 .vscode/settings.json
