--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,4 +109,121 @@ jobs:
             npm test
       - save_test_results
 
-  # ... rest of the config remains the same ...
+  build:
+    docker:
+      - image: cimg/node:16.20
+        environment:
+          NODE_ENV: production
+    steps:
+      - checkout
+      # Add workspace attachment for build caching
+      - attach_workspace:
+          at: .
+      - install_dependencies:
+          app-dir: .
+      - run:
+          name: Install Dependencies
+          command: npm run install-all
+      # Add build caching
+      - restore_cache:
+          keys:
+            - build-cache-{{ .Branch }}-{{ checksum "client/package-lock.json" }}-{{ checksum "server/package-lock.json" }}
+      - run:
+          name: Build Client
+          command: |
+            cd client
+            REACT_APP_API_URL=$PROD_API_URL npm run build
+      - run:
+          name: Build Server
+          command: |
+            cd server
+            npm run build
+      - run:
+          name: Compile Migrations
+          command: |
+            cd server
+            npx tsc migrations/*.ts --outDir dist/migrations
+      # Save build cache
+      - save_cache:
+          key: build-cache-{{ .Branch }}-{{ checksum "client/package-lock.json" }}-{{ checksum "server/package-lock.json" }}
+          paths:
+            - client/build
+            - server/dist
+      - persist_to_workspace:
+          root: .
+          paths:
+            - client/build
+            - server/dist
+            - server/package.json
+            - server/package-lock.json
+            - server/ecosystem.config.js
+
+  deploy:
+    machine:
+      image: ubuntu-2204:current
+    environment:
+      NODE_ENV: production
+    steps:
+      - attach_workspace:
+          at: /home/circleci/project
+      - add_ssh_keys:
+          fingerprints:
+            - "SHA256:6+qHFQDbqCYFzFzHfY7fpBaly2rEB83DUxswOGj6dkI"
+      # Add deployment verification
+      - run:
+          name: Verify deployment directory
+          command: |
+            ssh $SERVER_USER@$SERVER_IP "[ -d $SERVER_DIR ] || mkdir -p $SERVER_DIR/{client,server}"
+      - run:
+          name: Backup current deployment
+          command: |
+            ssh $SERVER_USER@$SERVER_IP "if [ -d $SERVER_DIR/client ]; then tar -czf $SERVER_DIR/backup-$(date +%Y%m%d_%H%M%S).tar.gz $SERVER_DIR/{client,server}; fi"
+      - run:
+          name: Copy compiled migrations
+          command: |
+            if [ -d "/home/circleci/project/server/dist/migrations" ] && [ "$(ls -A /home/circleci/project/server/dist/migrations)" ]; then
+              scp -r /home/circleci/project/server/dist/migrations/* $SERVER_USER@$SERVER_IP:$SERVER_DIR/server/migrations
+            else
+              echo "No compiled migrations to copy"
+            fi
+      - run:
+          name: Run database migrations
+          command: |
+            ssh $SERVER_USER@$SERVER_IP "cd $SERVER_DIR/server && NODE_ENV=production npm run migrate:latest || echo 'No migrations to run'"
+      - run:
+          name: Deploy to Server
+          command: |
+            scp -r /home/circleci/project/client/build/* $SERVER_USER@$SERVER_IP:$SERVER_DIR/client
+            scp -r /home/circleci/project/server/dist/* /home/circleci/project/server/package*.json /home/circleci/project/server/ecosystem.config.js $SERVER_USER@$SERVER_IP:$SERVER_DIR/server
+            ssh $SERVER_USER@$SERVER_IP "cd $SERVER_DIR/server && npm ci --production && pm2 restart ecosystem.config.js && sudo systemctl restart nginx"
+      # Add health check
+      - run:
+          name: Verify Deployment
+          command: |
+            sleep 10
+            curl --fail --retry 3 --retry-delay 5 https://taskmaster.mrspinn.ca/api/health || (echo "Deployment verification failed" && exit 1)
+
+workflows:
+  test-build-and-deploy:
+    jobs:
+      - test-backend:
+          filters:
+            branches:
+              only: master
+      - test-frontend:
+          filters:
+            branches:
+              only: master
+      - build:
+          requires:
+            - test-backend
+            - test-frontend
+          filters:
+            branches:
+              only: master
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
