feat: Enhance CircleCI configuration with separate client and server dependency installations and improved deployment verification

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,14 +61,18 @@ jobs:
       NODE_OPTIONS: "--max-old-space-size=4096"
     steps:
       - checkout
+      # Install client dependencies first
       - install-and-cache:
-          app-dir: "."
+          app-dir: client
       - run:
           name: Build Client
           command: |
             cd client
             npm run build
             tar -czf build.tar.gz build/
+      # Install server dependencies
+      - install-and-cache:
+          app-dir: server
       - run:
           name: Build Server
           command: |
@@ -115,15 +119,33 @@ jobs:
       - run:
           name: Verify Deployment
           command: |
+            check_health() {
+              response=$(curl -s -w "\n%{http_code}" https://taskmaster.mrspinn.ca/api/health)
+              body=$(echo "$response" | head -n 1)
+              status=$(echo "$response" | tail -n 1)
+              
+              if [[ "$status" == "200" && "$body" == "ok" ]]; then
+                return 0
+              else
+                return 1
+              fi
+            }
+            
             for i in {1..12}; do
-              if curl -s https://taskmaster.mrspinn.ca/api/health | grep -q "ok"; then
-                echo "Deployment verified successfully"
+              if check_health; then
+                echo "✓ Deployment verified successfully - API and database are healthy"
                 exit 0
               fi
-              echo "Waiting for service to be ready..."
-              sleep 10
+              
+              if [ $i -lt 12 ]; then
+                echo "Attempt $i: Service not ready, waiting 10 seconds..."
+                sleep 10
+              fi
             done
-            echo "Deployment verification failed"
+            
+            echo "✗ Deployment verification failed after 2 minutes"
+            echo "Fetching recent logs for debugging:"
+            ssh $SERVER_USER@$SERVER_IP "cd $SERVER_DIR/server && pm2 logs --lines 50 --nostream"
             exit 1
 
 workflows:
